--- a/.github/workflows/amazon-cicd.yaml
+++ b/.github/workflows/amazon-cicd.yaml
@@ -24,7 +24,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install 
+        run: npm ci
 
       - name: Run tests
         run: npm test || echo "No tests found, would add tests in a project"
@@ -42,7 +42,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run SonarQube analysis
         uses: SonarSource/sonarqube-scan-action@v5.0.0 
@@ -64,7 +64,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci 
 
       - name: Build
         run: npm run build
@@ -88,7 +88,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run OWASP Dependency Check
         uses: jeremylong/gh-action-owasp-dependency-check@v2
@@ -117,7 +117,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run Trivy Scan
         uses: aquasecurity/trivy-action@v0.30.0
