--- a/.github/workflows/amazon-cicd.yaml
+++ b/.github/workflows/amazon-cicd.yaml
@@ -120,7 +120,7 @@ jobs:
         run: npm ci
 
       - name: Run Trivy Scan
-        uses: aquasecurity/trivy-action@v0.30.0
+        uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
           scan-ref: '.'
